lost color consistency, but fixed responsiveness issues and readability

--- a/src/index.css
+++ b/src/index.css
@@ -31,26 +31,17 @@ body,
 .btn-styles {
     display: flex;
     align-items: center;
-    border: 2px solid var(--primary);
+    border: 2px solid var(--accent);
     padding: .3rem .6rem;
     border-radius: .5rem;
     min-height: 1.2rem;
     max-width: fit-content;
-
+    color: var(--accent);
     transition: 200;
 }
 
 .btn-styles:hover {
     background-color: hsla(160, 41%, 28%, .2);
-}
-
-/* resets and utils */
-.text-primary-light {
-    color: var(--primary-light);
-}
-
-.bg-secondary-light {
-    background: var(--accent);
 }
 
 /* media queries 
